[package]
name = "mcservermodgui"
version = "0.1.0"
edition = "2024"

[dependencies]
frostmark = "0.1.0"
iced = { version = "0.13.1", features = ["image", "svg", "tokio", "multi-window"] }
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
smart-default = "0.7.1"
webbrowser = "1.0.6"
