[package]
name = "mcservermodgui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image", "svg", "tokio", "canvas"] }
frostmark = { path = "dependencies/frostmark" }
iced_widget_extra = { path = "dependencies/iced_widget_extra", features = ["pick_list_multi"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
smart-default = "0.7.1"
strum = "0.27.2"
strum_macros = "0.27.2"
toml = "0.9.8"
webbrowser = "1.0.6"
zip = "6.0.0"
itertools = "0.14.0"
iced_aw = "0.13.0"

# [features]
# debug = ["iced/hot"]