[package]
name = "frostmark"
version = "0.2.0-dev"
edition = "2021"
authors = ["Mrmayman <navneetkrishna22@gmail.com>"]
description = "HTML/Markdown renderer for the Iced GUI framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mrmayman/frostmark"
documentation = "https://docs.rs/frostmark"
readme = "README.md"
keywords = ["gui", "iced", "markdown", "html", "renderer"]
categories = ["gui"]

[dependencies]
iced = { version = "0.14", default-features = false, features = ["advanced"] }
html5ever = "0.27"
markup5ever_rcdom = "0.3"
bitflags = "2"

comrak = { version = "0.41", default-features = false, optional = true }

[dev-dependencies]
open = "5"
tokio = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    # Default features
    "charset",
    "http2",
] }

[features]
default = ["markdown", "iced-wgpu", "iced-tiny-skia"]
markdown = ["dep:comrak"]
iced-wgpu = ["iced/wgpu"]
iced-tiny-skia = ["iced/tiny-skia"]

[[example]]
name = "hello"
required-features = ["markdown", "iced/thread-pool"]

[[example]]
name = "live_edit"
required-features = ["markdown", "iced/thread-pool"]

[[example]]
name = "image"
required-features = ["markdown", "iced/image", "iced/tokio"]

[[example]]
name = "large_readme"
required-features = ["markdown", "iced/image", "iced/tokio", "iced/svg"]
